--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,13 @@
 			<version>1.18.8</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>5.1.2</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -79,16 +83,16 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>5.1.5.RELEASE</spring.version>
 		<fastjson.version>1.2.58</fastjson.version>
-		
+
 		<mybatis.version>3.4.6</mybatis.version>
 		<mybatis-spring.version>2.0.1</mybatis-spring.version>
 		<mysql.version>8.0.16</mysql.version>
-		
+
 		<jdk.version>1.8</jdk.version>
 	</properties>
 </project>
